<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/item_search"
            android:title="@string/menu_item_search"
            android:icon="@drawable/ic_search"
            app:showAsAction="ifRoom"
            android:orderInCategory="100"/>

    <item
            android:id="@+id/item_favorites"
            android:title="@string/menu_item_favorite"
            android:icon="@drawable/ic_favorite"
            app:showAsAction="ifRoom"
            android:orderInCategory="200"/>

    <item
            android:id="@+id/item_shopping_cart"
            android:title="@string/menu_item_shopping_cart"
            android:icon="@drawable/ic_shopping_cart"
            app:showAsAction="ifRoom"
            android:orderInCategory="300"/>

</menu>