<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProductDetailsActivity"
        android:background="@color/white">

    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_middle"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:id="@+id/iv_product_img"
            android:src="@drawable/img_cadeira_camelia"
            app:layout_constraintTop_toTopOf="@+id/include"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline_middle"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitCenter"
            android:contentDescription="@null"/>

    <include layout="@layout/app_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/include"/>

    <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideline_middle"
            app:layout_constraintBottom_toTopOf="@id/btn_add_to_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="@dimen/left_margin_details_activity"
            android:paddingLeft="@dimen/left_margin_details_activity"
            android:paddingEnd="@dimen/right_margin_details_activity"
            android:paddingRight="@dimen/right_margin_details_activity"
            android:paddingTop="@dimen/top_margin_details_activity"
            android:paddingBottom="@dimen/bottom_margin_details_activity">

        <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="Cadeira Roseta Fina"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_price"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/quicksand_medium"/>

            <TextView
                    android:text="Produzida com a base em madeira maciça de eucalipto, estofamento de alta densidade e revestimento com tecido 100% algodão, qualidade é o que ela tem de sobra."
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_description"
                    style="@style/TextViewProductDetail"
                    android:textColor="@color/black"
                    android:gravity="start"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/margin_top_details_label"
                    android:fontFamily="@font/quicksand_medium"/>


            <LinearLayout
                    android:id="@+id/ll_detail_labels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/label_height"
                        android:id="@+id/tv_label_height"
                        android:layout_weight="1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        style="@style/TextViewLabelProductDetail"/>

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/label_width"
                        android:id="@+id/tv_label_width"
                        android:layout_weight="1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        style="@style/TextViewLabelProductDetail"/>

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/label_depth"
                        android:id="@+id/tv_label_depth"
                        android:layout_weight="1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        style="@style/TextViewLabelProductDetail"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintTop_toBottomOf="@id/ll_detail_labels"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="92 cm"
                        android:id="@+id/tv_height"
                        android:layout_weight="1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        style="@style/TextViewProductDetail"/>

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="65 cm"
                        android:id="@+id/tv_width"
                        android:layout_weight="1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        style="@style/TextViewProductDetail"/>

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="52 cm"
                        android:id="@+id/tv_depth"
                        android:layout_weight="1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        style="@style/TextViewProductDetail"/>

            </LinearLayout>

            <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

            <View
                    android:id="@+id/view_detail_tv_price"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/shape_background_deital_textview"
                    app:layout_constraintBottom_toBottomOf="@id/tv_price"
                    app:layout_constraintStart_toStartOf="@id/tv_price"
                    app:layout_constraintTop_toTopOf="@+id/tv_price"
                    app:layout_constraintEnd_toEndOf="@+id/tv_price"
                    />

            <TextView
                    android:text="R$ 55,00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/tv_price"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/advent_pro_semibold"
                    android:textColor="@color/black"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <ImageButton
            android:id="@+id/btn_add_favorite"
            android:contentDescription="@null"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/selector_add_favorite_btn"
            android:src="@drawable/ic_favorite"
            android:layout_marginBottom="@dimen/bottom_margin_details_activity"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/left_margin_details_activity"
            android:layout_marginLeft="@dimen/left_margin_details_activity"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="addFavorite"/>

    <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            style="@style/ButtonStyle"
            android:stateListAnimator="@null"
            android:layout_marginBottom="@dimen/bottom_margin_details_activity"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/right_margin_details_activity"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/right_margin_details_activity"
            app:layout_constraintStart_toEndOf="@+id/btn_add_favorite"
            android:layout_marginStart="@dimen/left_margin_details_activity"
            android:layout_marginLeft="@dimen/left_margin_details_activity"/>

</android.support.constraint.ConstraintLayout>